fixed overflow-y on editor container.

--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,8 @@ body {
 /* Editor
 ---------------------------------------- */
 .editor {
-    height: 150px;
+    height: 250px;
+    overflow-y: scroll;
 }
 
 .title-input {
